# rss_compiler

./: .gitignore  README.md  RSS_notes.md  article.py  index.html  pyproject.toml  rss_scraper.py  rss_scrapper.py  server.py  style.css
static/src/: settings.json  site.json
static/stylesheets/: style.css
templates/: base.html  home.html  index.html
